+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.2 Alpha 2?
=================================

*Release date: XX-Sep-2010*

Core and Builtins
-----------------

- Issue #9612: The set object is now 64-bit clean under Windows.

- Issue #8202: sys.argv[0] is now set to '-m' instead of '-c' when searching
  for the module file to be executed with the -m command  line option.

- Issue #9599: Create PySys_FormatStdout() and PySys_FormatStderr() functions
  to write a message formatted by PyUnicode_FromFormatV() to sys.stdout and
  sys.stderr.

- Issue #9542: Create PyUnicode_FSDecoder() function, a ParseTuple converter:
  decode bytes objects to unicode using PyUnicode_DecodeFSDefaultAndSize();
  str objects are output as-is.

- Issue #9203: Computed gotos are now enabled by default on supported
  compilers (which are detected by the configure script).  They can still
  be disable selectively by specifying --without-computed-gotos.

- Issue #9425: Create PyErr_WarnFormat() function, similar to PyErr_WarnEx()
  but use PyUnicode_FromFormatV() to format the warning message.

- Issue #8530: Prevent stringlib fastsearch from reading beyond the front
  of an array.

- Issue #5319: Print an error if flushing stdout fails at interpreter
  shutdown.

- Issue #9337: The str() of a float or complex number is now identical
  to its repr().

- Issue #9416: Fix some issues with complex formatting where the
  output with no type specifier failed to match the str output:

    - format(complex(-0.0, 2.0), '-') omitted the real part from the output,
    - format(complex(0.0, 2.0), '-') included a sign and parentheses.

Extensions
----------

- Issue #665761: ``functools.reduce()`` will no longer mask exceptions
  other than ``TypeError`` raised by the iterator argument.

- Issue #9570: Use PEP 383 decoding in os.mknod and os.mkfifo.

- Issue #6915: Under Windows, os.listdir() didn't release the Global